// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders a CTABanner correctly when invalid icon is specified 1`] = `
<DocumentFragment>
  <div
    class="base infoBanner"
  >
    <div
      class="infoIconWrapper"
    >
      <svg
        aria-label="Svg Play Icon"
        aria-labelledby="react-aria-:r2:"
        class="Icon-module_yNB47q_icon"
        fill="none"
        height="16"
        role="img"
        slot="icon"
        style="color: var(--via-color-icon-info);"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.779 6.704a1.5 1.5 0 0 1 0 2.592l-7.523 4.388A1.5 1.5 0 0 1 4 12.388V3.612a1.5 1.5 0 0 1 2.256-1.296z"
          fill="currentColor"
        />
      </svg>
    </div>
    <p>
      If you prefer learning through videos, try this lesson on 
      <a
        href="https://university.mongodb.com/"
        target="_self"
      >
        MongoDB University
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders a CTABanner correctly when lowercase icon is specified 1`] = `
<DocumentFragment>
  <div
    class="base infoBanner"
  >
    <div
      class="infoIconWrapper"
    >
      <svg
        aria-label="Svg Bell Icon"
        aria-labelledby="react-aria-:r3:"
        class="Icon-module_yNB47q_icon"
        fill="none"
        height="16"
        role="img"
        slot="icon"
        style="color: var(--via-color-icon-info);"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12.625 6.138a4.66 4.66 0 0 0-3.268-3.925C9.228 1.52 8.67 1 8 1s-1.228.52-1.357 1.213a4.66 4.66 0 0 0-3.268 3.925l-.452 3.963h.026a.95.95 0 0 0 0 1.899h10.102a.95.95 0 0 0 0-1.899h.026zM8 15a2 2 0 0 1-2-2h4a2 2 0 0 1-2 2"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
    </div>
    <p>
      If you prefer learning through videos, try this lesson on 
      <a
        href="https://university.mongodb.com/"
        target="_self"
      >
        MongoDB University
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders a CTABanner correctly when no icon is specified 1`] = `
<DocumentFragment>
  <div
    class="base infoBanner"
  >
    <div
      class="infoIconWrapper"
    >
      <svg
        aria-label="Svg Play Icon"
        aria-labelledby="react-aria-:r1:"
        class="Icon-module_yNB47q_icon"
        fill="none"
        height="16"
        role="img"
        slot="icon"
        style="color: var(--via-color-icon-info);"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M13.779 6.704a1.5 1.5 0 0 1 0 2.592l-7.523 4.388A1.5 1.5 0 0 1 4 12.388V3.612a1.5 1.5 0 0 1 2.256-1.296z"
          fill="currentColor"
        />
      </svg>
    </div>
    <p>
      If you prefer learning through videos, try this lesson on 
      <a
        href="https://university.mongodb.com/"
        target="_self"
      >
        MongoDB University
      </a>
    </p>
  </div>
</DocumentFragment>
`;

exports[`renders a CTABanner correctly when non-default icon is specified 1`] = `
<DocumentFragment>
  <div
    class="base infoBanner"
  >
    <div
      class="infoIconWrapper"
    >
      <svg
        aria-label="Svg University Icon"
        aria-labelledby="react-aria-:r0:"
        class="Icon-module_yNB47q_icon"
        fill="none"
        height="16"
        role="img"
        slot="icon"
        style="color: var(--via-color-icon-info);"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M8.5 4.613c0-.383.191-.74.51-.953a6.9 6.9 0 0 1 2.145-.949l2.406-.601a.353.353 0 0 1 .439.342v7.88c0 .238 0 .357-.043.453a.5.5 0 0 1-.176.211c-.087.06-.204.081-.438.123l-3.9.71c-.324.058-.486.088-.612.042a.5.5 0 0 1-.264-.22c-.067-.116-.067-.28-.067-.61zM2 2.452c0-.23.216-.398.439-.342l2.407.601a6.9 6.9 0 0 1 2.144.95c.319.211.51.569.51.952v6.428c0 .33 0 .494-.067.61a.5.5 0 0 1-.264.22c-.126.046-.288.016-.612-.043l-3.9-.709c-.234-.042-.35-.063-.438-.123a.5.5 0 0 1-.176-.21C2 10.688 2 10.57 2 10.331zM2.008 12.41a.5.5 0 0 1 .581-.402l5.143.935c.177.032.359.032.536 0l5.143-.935a.5.5 0 0 1 .178.984l-4.134.752c-.163.434-.753.756-1.455.756s-1.292-.322-1.455-.756l-4.134-.752a.5.5 0 0 1-.403-.581"
          fill="currentColor"
        />
      </svg>
    </div>
    <p>
      If you prefer learning through videos, try this lesson on 
      <a
        href="https://university.mongodb.com/"
        target="_self"
      >
        MongoDB University
      </a>
    </p>
  </div>
</DocumentFragment>
`;
